[package]
name = "rawkey"
version = "0.1.0"
authors = ["Jonathan Turner <jonathan.d.turner@gmail.com>"]
edition = "2018"

[target.'cfg(target_os = "windows")'.dependencies]
user32-sys = "0.2.0"
winapi = {version = "0.3.7", features = ["winuser"]}

[target.'cfg(target_os = "linux")'.dependencies.x11]
version = "2.18.1"
features = ["xlib"]

[target.'cfg(target_os = "macos")'.dependencies]
readkey = "0.1.5"
